content/boundary/v1.0.x/content/docs/commands/host-catalogs/create.mdx
---
layout: docs
page_title: host-catalogs create - Command
description: >-
  The "host-catalogs create" command creates a new host catalog resource. You can create plugin or static host catalog types.
# START AUTO GENERATED METADATA, DO NOT EDIT
created_at: 2025-11-18T17:04:41-05:00
last_modified: 2025-11-18T17:04:41-05:00
# END AUTO GENERATED METADATA
---

# host-catalogs create

Command: `host-catalogs create`

The `host-catalogs create` command lets you create a new host catalog.

## Example

This example creates a static host catalog with the name `prodops` and the description `For ProdOps usage`:

```shell-session
$ boundary host-catalogs create static -name prodops -description "For ProdOps usage"
```

## Usage

<CodeBlockConfig hideClipboard>

```shell-session
$ boundary host-catalogs create [type] <subcommand> [options] [args]

Please see the typed subcommand help for detailed usage information.

Subcommands:
    plugin    Create a plugin-type host catalog
    static    Create a static-type host catalog
```

</CodeBlockConfig>

### Usages by type

You can create plugin or static host catalog types.

<Tabs>
<Tab heading="Plugin">

The `boundary host-catalogs create plugin` command lets you create a plugin type host catalog.

#### Example

This example creates a plugin type host catalog with the name `prodops` and the description `Plugin host-catalog for ProdOps`, and adds it to a scope with the ID `p_1234567890`.

```shell-session
$ boundary host-catalogs create plugin -scope-id p_1234567890 -name prodops -description "Plugin host-catalog for ProdOps"
```

#### Usage

<CodeBlockConfig hideClipboard>

```shell-session
$ boundary host-catalogs create plugin [options] [args]
```

</CodeBlockConfig>

#### Command options

- `-description=<string>` - The description to set on the plugin host catalog.
- `-name=<string>` - The name to set on the plugin host catalog.
- `-plugin-id=<string>` - The ID of the plugin associated with the host catalog you want to create.
- `-plugin-name=<string>` - The name of the plugin associated with the host catalog you want to create.
- `-scope-id=<string>` - The scope in which you want to create the host catalog.
The default scope is `global`.
You can also specify the scope using the **BOUNDARY_SCOPE_ID** environment variable.
- `-worker-filter=<string>` A boolean expression to filter which workers can handle dynamic host catalog commands for this host catalog.

#### Attribute options

- `-attr` - A key=value pair to add to the request's attribute map.
This option can also be a key value only, which sets a JSON null as the value.
If you provide a value, Boundary automatically infers the type.
You can override the type using `-string-attr`, `-bool-attr`, or `-num-attr`.
You can specify this value multiple times.
This option supports referencing values from files using `file://` and environment variables using `env://`.
- `-attributes=<string>` - A JSON map value that you can use as the entirety of the request's attributes map.
Usually this value is sourced from a file using the `file://` syntax.
This option is exclusive with other `attr` flags.
- `-bool-attr` - A key=value Boolean value that you can add to the request's attributes map.
You can specify this value multiple times.
This option supports referencing values from files using `file://` and environment variables using `env://`.
- `-num-attr` - A key=value numeric value that you can add to the request's attributes map.
You can specify this value multiple times.
This attribute supports referencing values from files using `file://` and environment variables using `env://`.
- `-string-attr` - A key=value string value that you can add to the request's attributes map.
You can specify this value multiple times.
This option supports referencing values from files using `file://` and environment variables using `env://`.

#### Secrets options

- `-bool-secret` - A key=value Boolean value that you can add to the request's secrets map.
You can specify this value multiple times.
This option supports referencing values from files using `file://` and environment variables using `env://`.
- `-num-secret` - A key=value numeric value that you can add to the request's secrets map.
You can specify this value multiple times.
This option supports referencing values from files using `file://` and environment variables using `env://`.
- `-secret` - A key=value pair that you can add to the request's secrets map.
This option can also be a key value only, which sets a JSON null as the value.
If you provide a value, Boundary automatically infers the type.
You can override the type using `-string-secret`, `-bool-secret`, or `-num-secret`.
You can specify this value multiple times.
This option supports referencing values from files using `file://` and environment variables using `env://`.
- `-secrets=<string>` - A JSON map value that you can use as the entirety of the request's secrets map.
Usually this value is sourced from file using `file://` syntax.
This option is exclusive with other secret flags.
- `-string-secret` - A key=value string value that you can add to the request's attributes map.
You can specify this value multiple times.
This option supports referencing values from files using `file://` and environment variables using `env://`.

#### Plugin type options

The following options are specific to the type of plugin.

<Tabs>

<Tab heading="AWS" group="aws">

- `disable_credential_rotation` - When set to `true`, Boundary does not rotate the credentials with AWS automatically.
- `region` - The region to configure the host catalog for. All host sets in this catalog are configured for this region.
- `access_key_id` - The access key ID for the IAM user to use with this host catalog.
- `secret_access_key` - The secret access key for the IAM user to use with this host catalog.
- `role_arn` - The AWS role ARN used for `AssumeRole` authentication. If you provide a `role_arn` value, you must also set `disable_credential_rotation` to `true`.
- `role_external_id` - The external ID that you configured for the `AssumeRole` provider.
- `role_session_name` - The session name that you configured for the `AssumeRole` provider.
- `role_tags` - The key-value pair tags that you configured for the `AssumeRole` provider.
- `-worker-filter` - A boolean expression to filter which workers can handle dynamic host catalog commands for this host catalog. This should match a valid filter expression for the self-managed worker deployed in AWS. Refer to worker [Filter examples](/boundary/docs/workers/worker-tags#filter-workers-using-tags) to learn more.
- `-instance_addresses_only=true` - If added with the `-attr` flag, Boundary limits the syncing of instance addresses and automatically selects the host's primary ENI (Elastic Network Interface). To unset the value later, change `true` to `false`.

</Tab>

<Tab heading="Azure" group="azure">

- `disable_credential_rotation` - When set to `true`, Boundary does not rotate the credentials automatically. Azure host catalogs do not currently support credential rotation.
- `tenant_id` - The ARM tenant (directory) ID for your Azure Active Directory application.
- `subscription_id` - The ARM subscription ID for the subscription that has read access.
- `client_id` - The client (application) ID of the Azure service principal that Boundary should use to authenticate and discover hosts.
- `secret_value` - The ARM client secret value that Azure generates for authentication.

</Tab>

<Tab heading="GCP" group="gcp">

- `disable_credential_rotation` - When set to `true`, Boundary does not rotate the credentials automatically.
- `zone` - The GCP zone of the instances that you want to add to the host catalog.
- `project_id` - The project ID of any instances that you want to add to the host catalog.
- `client_email` - The unique email address that is used to identify the service account. It is required when you authenticate using the service account.
- `private_key_id` - The unique identifier of the private key. It is required when you authenticate using the service account.
- `private_key` - The private key used to obtain an OAuth 2.0 access token. The key must be PEM encoded. It is required when you authenticate using the service account.
- `target_service_account_id` - The email address of the service account to impersonate. It is required when you authenticate using service account impersonation.

</Tab>

</Tabs>

</Tab>

<Tab heading="Static">

The `boundary host-catalogs create static` command lets you create a static type host catalog.

#### Example

This example creates a static type host catalog with the name `prodops` and the description `Static host-catalog for ProdOps` and adds it to the scope `p_1234567890`:

```shell-session
$ boundary host-catalogs create static -scope-id p_1234567890 -name prodops -description "Static host-catalog for ProdOps"
```

#### Usage

<CodeBlockConfig hideClipboard>

```shell-session
$ boundary host-catalogs create static [options] [args]
```

</CodeBlockConfig>

#### Command options

- `-description=<string>` - The description to set on the static host catalog.
- `-name=<string>` - The name to set on the static host catalog.
- `-scope-id=<string>` - The scope in which to create the static host catalog.
The default scope is `global`.
You can also specify the scope using the **BOUNDARY_SCOPE_ID** environment variable,

</Tab>
</Tabs>

@include 'cmd-option-note.mdx'